# llm-labeling-scaffold

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.rclone.example.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-image.yml
configs/: integrations.env.example
docker/mlflow/: Dockerfile
docker/panel/: Dockerfile
docs/: artifact_contracts.md  data_governance.md  data_lake_scaffold_integration.md  mcp_integration.md  profile_presets.md  remote_training_design.md
examples/toy_text_classification/: prompt.md  task.yaml
examples/toy_text_classification/raw/: sample.jsonl
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  appRoutes.js  appRoutes.test.js  routeMatching.js  router.jsx  styles.css
frontend/src/components/: Sidebar.jsx
frontend/src/pages/: GoldPage.jsx  ImportsPage.jsx  JobsPage.jsx  ModelsPage.jsx  RunDetailPage.jsx  RunsPage.jsx  SamplesPage.jsx  (+18 more)
scripts/: lls  stack
src/llm_labeling_scaffold/: agreement.py  annotation.py  audit.py  batching.py  cli.py  config.py  data_lake.py  gold.py  infer.py  io.py  jobs.py  merge.py  panel.py  panel_settings.py  pipeline.py  profiles.py  sampling.py  schema.py  smoke.py  suggestions.py  task_registry.py  train.py
tests/: conftest.py  test_agreement.py  test_audit_merge.py  test_batching.py  test_data_lake_publish.py  test_integrations.py  test_panel.py  test_panel_imports.py  test_panel_settings.py  test_pipeline.py  test_providers.py  test_smoke.py  test_task_registry.py  test_training_registry.py
(+10 files in other folders)
