[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-labeling-scaffold"
version = "0.1.0"
description = "Task-agnostic LLM labeling and local-model extrapolation scaffold"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.0",
]

[project.optional-dependencies]
baseline = [
  "scikit-learn>=1.3",
  "joblib>=1.3",
]
mlflow = [
  "mlflow>=2.0",
]
argilla = [
  "argilla>=2.0",
]
integrations = [
  "argilla>=2.0",
  "mlflow>=2.0",
]

[project.scripts]
lls = "llm_labeling_scaffold.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
